--- a/Week1/Day 1/Core/registration form.html
+++ b/Week1/Day 1/Core/registration form.html
@@ -12,41 +12,41 @@
         <form action="process">
             <div>
                 <label> first name:</label>
-                <input type="text" name= "first name" placeholder="type here."
+                <input type="text" name= "first name" placeholder="type here.">
             </div>
             <div>
                 <label> last name:</label>
-                <input type="text" name="last name" placeholder="type here." 
+                <input type="text" name="last name" placeholder="type here." >
             </div>
             <div>
                 <label> email adress:</label>
-                <input type="text" name="email adress" placeholder="type here." 
+                <input type="text" name="email adress" placeholder="type here."> 
             </div>
             <div>
                 <label> password:</label>
-                <input type="text" name="last name" placeholder="type here."
+                <input type="text" name="last name" placeholder="type here.">
             </div>
             <div>
                 <label> confirm password:</label>
-                <input type="text" name="confirm password" placeholder="type here." 
+                <input type="text" name="confirm password" placeholder="type here."> 
             </div>
             <div>
                 <label> birthday:</label>
                 <input type="date" name="dob">
             </div>
                 <label>gender identity:</label> <br>
-                <input type="radio" name="font" value="normal" id="normal">
-                <label for="normal">male</label>
+                <input type="radio" name="font" value="normal" id="1">
+                <label for="1">male</label>
             <div>
-                <input type="radio" name="font" value="normal" id="normal">
-                <label for="normal">female</label>
+                <input type="radio" name="font" value="normal" id="2">
+                <label for="2">female</label>
             </div>
             <div>
                 <label>A short description about myself</label><br>
                 <textarea name="comment" cols="20" rows="3"></textarea>
             </div>
             <div>
-                <label for="favorite language">favorite language:</label>
+                <label for="4">favorite language:</label>
                 <select name="snack">
                     <option value="1">html</option>
                     <option value="2">js</option>
@@ -64,5 +64,6 @@
                 <p>*indicates a required field</p>
         </form>
     </div>
+
 </body>
 </html>
