--- a/Week1/Day 2/Practice/styling.html
+++ b/Week1/Day 2/Practice/styling.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
+    <div>
     <h1>my <span style="color:rgb(90, 191, 224)">cloud</span></h1>
     <h2>completed projects :</h2>
     <h3>contact us</h3>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat o
+        bcaecati et vel id, saepe provident! Ad ab tempore, aliquid nisi eveniet magnam at a earum! A eligendi quaerat earum libero?</p>
 </body>
 </html>
