--- a/test.html
+++ b/test.html
@@ -7,51 +7,39 @@
     <title>JS Bin</title>
     <link rel="stylesheet" href="test.css">
 </head>
-
 <body>
-    <div class="container">
-        <h1>Title</h1>
-        <div id="message">
-            <div class="header"><span>I am an Alert!</span><span>×</span></div>
-            <p>This is some arbitrary alert text!, don't worry about what it actually says!</p>
-            <button>OK</button>
+    <!-- all page -->
+    <div class="main">
+        <!-- navbar -->
+        <nav class="nav">
+            <h1 class="nav-title">profile</h1>
+            <ul class="nav-links">
+                <li> <a href="#"home>home</a> </li>
+                <li><a href="#">my profile</a></li>
+                <li><a href="#">find connection</a></li>
+                <li><button class="btn">sign out</button> </li>
+                
+            </ul>
+        </nav>
+        <!-- body -->
+        <div class="container">
+            <!-- left side  -->
+            <div class="left">
+                <div class="top">
+                    <div class="blue">
+                        <img src="Week1\Day 4\Core\Profile page\icons\user-circle.png" alt="">
+                    </div>
+                    <div class="white"></div>
+                    <h1>jane doe</h1>
+                    <h3> <img class="icon" src="Week1\Day 4\Core\Profile page\icons\map-marker.png" alt="mar_maker"> </h3>
+                    <p>eveloper/engineer/problem solver <br> master of shadows and the internet</p>
+                    <p><a href ="#"><img class="icon"  src="Week1\Day 4\Core\Profile page\icons\gear.png" alt=""gear>edit profil</a> </p>
+                </div>
+
+            </div>
+
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deleniti saepe odit pariatur delectus
-            repudiandae atque illum aperiam possimus numquam vel, quo ducimus nulla est, id sunt optio eius voluptas.
-            Repudiandae commodi temporibus aliquid illum beatae eveniet unde cum officia rem possimus aut cupiditate,
-            sint rerum accusantium itaque explicabo tenetur voluptate necessitatibus corrupti provident praesentium?</p>
+
     </div>
 </body>
 
