--- a/test/test.html
+++ b/test/test.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <!-- all page -->
-    <div class="main">
+    <!-- <div class="main"> -->
         <!-- navbar -->
-        <nav class="nav">
+        <!-- <nav class="nav">
             <h1 class="nav-title">profile</h1>
             <ul class="nav-links">
                 <li> <a href="#"home>home</a> </li>
@@ -22,9 +22,9 @@
             </ul>
         </nav>
         <!-- body -->
-        <div class="container">
+        <!-- <div class="container"> -->
             <!-- left side  -->
-            <div class="left">
+            <!-- <div class="left">
                 <div class="top">
                     <div class="blue">
                         <img src="Week1\Day 4\Core\Profile page\icons\user-circle.png" alt="">
@@ -40,7 +40,10 @@
 
         </div>
 
-    </div>
+    </div> --> 
+
+    <div class="block" onmouseover="over(this)" onmouseout="out(this)"></div>
+    <script src="bsbs.js" ></script>
 </body>
 
 </html>
