--- a/test/test.html
+++ b/test/test.html
@@ -41,8 +41,12 @@
         </div>
 
     </div> --> 
-
+<p id="psspss">1</p>
+<button onclick="increment()">Increment</button>
     <div class="block" onmouseover="over(this)" onmouseout="out(this)"></div>
+
+    <h3>Lorem Ipsem</h3>
+
     <script src="bsbs.js" ></script>
 </body>
 
